--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: T-Graph
-description: 人材紹介・宇宙コンサルティング・アプリ開発
-url: "https://tgraph.jp"
-baseurl: ""
+description: 人材紹介・衛星データ活用コンサルティング・ビジネスアプリ開発
+url: "https://teddyten.github.io"
+baseurl: "/HP_tgraph"
 
 author:
   name: T-Graph
